# AI-Engineering-Bootcamp

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  env.example  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/evals/: eval_retriever.py
apps/api/src/api/: app.py
apps/api/src/api/agents/: agents.py  graph.py  models.py  retrieval_generation.py  tools.py
apps/api/src/api/agents/prompts/: intent_router.yaml  shopping_assistant.yaml
apps/api/src/api/agents/utils/: prompt_management.py  utils.py
apps/api/src/api/api/: endpoints.py  models.py
apps/api/src/api/api/processors/: submit_feedback.py
apps/chatbot_ui/: Dockerfile  pyproject.toml
apps/chatbot_ui/src/chatbot_ui/: app.py
apps/items_mcp_server/: Dockerfile  pyproject.toml
apps/items_mcp_server/src/items_mcp_server/: main.py  utils.py
apps/items_mcp_server/src/items_mcp_server/core/: config.py
apps/reviews_mcp_server/: Dockerfile  pyproject.toml
apps/reviews_mcp_server/src/reviews_mcp_server/: main.py  utils.py
notebooks/: 01-llm-apis.ipynb
notebooks/prerequisites/: 01-llm-apis.ipynb
notebooks/week_1/: 01-explore-amazon-dataset.ipynb  02-RAG-reprocessing-items.ipynb  03-RAG-pipeline.ipynb  04-RAG-eval-dataset.ipynb  05-RAG-Evals.ipynb
notebooks/week_2/: 01-structured-outputs-intro.ipynb  02-structured-outputs-RAG-pipeline.ipynb  03-Hybrid-Search.ipynb  04-Reranking.ipynb  05-Prompt-management.ipynb
notebooks/week_2/prompts/: retrieval_generation.yaml
notebooks/week_3/: 01-LangGraph-Intro.ipynb  02-Query-Rewriting.ipynb  03-Router.ipynb  04-Agent-Single-Turn.ipynb  05-LangGraph-LangChain.ipynb
notebooks/week_3/utils/: utils.py
notebooks/week_4/: 01-Multi-Turn-Agent.ipynb  02-Multiple-Tools.ipynb  03-Human-Feedback.ipynb  04-mcp.ipynb  05-State-Streaming.ipynb
src/: app.py
src/core/: config.py
