[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vaidas Armonas", email = "vaidas.armonas@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "google-genai>=1.67.0",
    "groq>=1.1.1",
    "openai>=2.28.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
shared = { workspace = true }

[tool.hatch.build.targets.wheel]
pacakges = ["src/api"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests",
    "README.md",
]
