[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vaidas Armonas", email = "vaidas.armonas@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "cohere>=6.1.0",
    "fastapi>=0.135.1",
    "google-genai>=1.67.0",
    "groq>=1.1.1",
    "instructor>=1.15.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langsmith>=0.7.30",
    "openai>=2.28.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17.1",
    "uvicorn>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
shared = { workspace = true }

[tool.hatch.build.targets.wheel]
pacakges = ["src/api"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests",
    "README.md",
]
