[project]
name = "items-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vaidas Armonas", email = "vaidas.armonas@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.2.4",
    "openai>=2.28.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "qdrant-client>=1.17.1",
]

[project.scripts]
items-mcp-server = "items_mcp_server:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
